tests/ui/errors/snapshots/parse_or_pattern_in_select.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:11]
 3 │   select {
 4 │     let x | y = <-ch => (),
   ·           ┬
   ·           ╰── expected `=`
 5 │   }
   ╰────
  help:  · code: [parse.unexpected_token]
